// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts overiding className 1`] = `
<div
  class="backdrop abc"
>
  <p>
    Hello
  </p>
</div>
`;

exports[`renders correctly 1`] = `
<div
  class="backdrop"
>
  <p>
    Hello
  </p>
</div>
`;
